feat: add records api
