# libs/api/records/src/lib/dtos/create-record.dto.ts
@@ -1,0 +1,6 @@
+export class CreateRecordDto {
+  date!: Date;
+  trackNumber!: number;
+  unitPrice!: number;
+  unitOfMeasure!: string;
+}
