# libs/api/records/src/lib/dtos/update-record.dto.ts
@@ -1,0 +1,6 @@
+export class UpdateRecordDto {
+  date?: Date;
+  trackNumber?: number;
+  unitPrice?: number;
+  unitOfMeasure?: string;
+}
