# libs/shared/src/lib/models.ts
@@ -3,11 +3,13 @@
 export { AuthResponse } from './models/auth-response';
 export { Category } from './models/category';
 export { CreateProductDto } from './models/create-product-dto';
+export { CreateRecordDto } from './models/create-record-dto';
 export { FindMeResponse } from './models/find-me-response';
 export { LoginDto } from './models/login-dto';
 export { Product } from './models/product';
 export { Record } from './models/record';
 export { RegisterDto } from './models/register-dto';
 export { UpdateProductDto } from './models/update-product-dto';
+export { UpdateRecordDto } from './models/update-record-dto';
 export { UpdateUserDto } from './models/update-user-dto';
 export { User } from './models/user';
