# libs/shared/src/lib/models/create-record-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CreateRecordDto {
+  date: string;
+  trackNumber: number;
+  unitOfMeasure: string;
+  unitPrice: number;
+}
