# libs/shared/src/lib/models/update-record-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UpdateRecordDto {
+  date?: string;
+  trackNumber?: number;
+  unitOfMeasure?: string;
+  unitPrice?: number;
+}
